--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         Download
       </h2>
       <p>
-        <p>Latest release:</p>
+        <p><a href="https://github.com/mavam/stat-cookbook/releases/latest">Latest release</a>:</p>
         
         <ul>
-          <li><strong><a href="https://github.com/mavam/stat-cookbook/releases/download/0.1/stat-cookbook.pdf">Download PDF</a></strong></li>
+          <li><strong>Download</strong>: <a href="https://github.com/mavam/stat-cookbook/releases/download/latest/stat-cookbook.pdf"><strong>PDF</strong></a></li>
+          <li><strong>Source Code</strong>: <a href="https://github.com/mavam/stat-cookbook/archive/0.1.zip">ZIP</a>, <a href="https://github.com/mavam/stat-cookbook/archive/0.1.tar.gz">tar.gz</a></li>
           <li><strong>Date</strong>: October 21, 2015</li>
-          <li><strong>Version</strong>: <a href="https://github.com/mavam/stat-cookbook/releases/0.1/">0.1</a></li>
+          <li><strong>Version</strong>: 0.1</li>
         </ul>
       </p>
       <h2>
